cleanup tags for datapack creators documentation! (the model plugin is still a mess tho) event to modify AcceptableItemSet entries